--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Service Worker demo",
   "main": "index.js",
-  "author": "Alexis Janvier <contact@alexisjanvier.net>",
+  "author": "Alexis Janvier <alexis@marmelab.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "json-server db.json --port 8081"
+},
   "dependencies": {
     "json-server": "^0.9.0"
   }
